// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer has bottom padding 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-bottom: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has bottom padding with shortcut 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-bottom: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has left padding 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-left: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has left padding with shortcut 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-left: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has left/right padding with shortcut 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-left: 1.728rem;
  padding-right: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has padding 1`] = `
.c0 {
  border: 1px dashed grey;
  padding: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has padding with shortcut 1`] = `
.c0 {
  border: 1px dashed grey;
  padding: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has right padding 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-right: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has right padding with shortcut 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-right: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has top padding 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-top: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has top padding with shortcut 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-top: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;

exports[`Spacer has top/bottom padding with shortcut 1`] = `
.c0 {
  border: 1px dashed grey;
  padding-top: 1.728rem;
  padding-bottom: 1.728rem;
}

<div
  class="c0"
>
  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
</div>
`;
